Fixes to typing on mobile safari

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -172,7 +172,7 @@ a[role="button"].btn-small {
   background: transparent;
   border: 1px solid $color-primary;
   color: $color-primary;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 11px;
   letter-spacing: 0.7px;
   line-height: 13px;
